--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
 </head>
+
 <body>
 
 
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
+  <div class="clock">
+    <div class="clock-face">
+      <div class="hand hour-hand"></div>
+      <div class="hand min-hand"></div>
+      <div class="hand second-hand"></div>
     </div>
+  </div>
 
 
   <style>
@@ -43,17 +45,18 @@
       position: relative;
       padding: 2rem;
       box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
+        0 0 0 4px rgba(0, 0, 0, 0.1),
         inset 0 0 0 3px #EFEFEF,
         inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
+        0 0 10px rgba(0, 0, 0, 0.2);
     }
 
     .clock-face {
       position: relative;
       width: 100%;
       height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
+      transform: translateY(-3px);
+      /* account for the height of the clock hands */
     }
 
     .hand {
@@ -62,13 +65,51 @@
       background: black;
       position: absolute;
       top: 50%;
-    }
+      transform-origin: 100%;
+      transform: rotate(90deg);
 
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(1, 2.7, 0.58, 1);
+    }
   </style>
 
   <script>
+    // hour is 30 deg
+    function setDate() {
+      let hand = document.querySelectorAll(".hand");
+      let hourHand = document.querySelector(".hour-hand");
+      let minHand = document.querySelector(".min-hand");
+      let secondHand = document.querySelector(".second-hand");
+      let date = new Date();
+      // hour hand
+      let hour = date.getHours();
+      let hourDeg = ((hour / 60) * 360) + 90;
+      hourHand.style.transform = `rotate(${hourDeg}deg)`;
 
+      // minute hand
+      let minute = date.getMinutes();
+      let minuteDeg = ((minute / 60) * 360) + 90;
+      minHand.style.transform = `rotate(${minuteDeg}deg)`;
 
+      // seconds hand
+      let seconds = date.getSeconds();
+      let secondDeg = ((seconds / 60) * 360) + 90
+      console.log(seconds, secondDeg);
+      if (seconds === 59) {
+        hand.forEach(hand => hand.style.transition = "none");
+      }
+      secondHand.style.transform = `rotate(${secondDeg}deg)`;
+
+      if (seconds === 1) {
+        hand.forEach(hand => {
+          hand.style.transition = "all 0.05s"
+          hand.style.transitionTimingFunction = "cubic-bezier(1, 2.7, 0.58, 1)";
+        });
+      }
+    }
+
+    setInterval(setDate, 1000);
   </script>
 </body>
+
 </html>
